...
        modifier = modifier,
        onDismissRequest = onDismiss,
        title = { Text(text = stringResource(R.string.edit_card_set_screen_update_flashcard_dialog_title)) },
        text = {
            Column {
                TextField(
                    modifier = Modifier.testTag("update_dialog_obverse_field"),
                    value = obverseState,
                    onValueChange = { obverseState = it },
                    label = { Text(stringResource(R.string.edit_card_set_screen_edit_flashcard_dialog_obverse_label)) }
                )
                TextField(
                    modifier = Modifier.testTag("update_dialog_reverse_field"),
...
