...
            modifier = Modifier.fillMaxSize()
        ) {
            OutlinedTextField(
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(12.dp)
                    .testTag("set title"),
                value = setName,
                onValueChange = { setName = it },
                label = { Text(stringResource(R.string.add_card_set_screen_card_set_title_hint)) },
                singleLine = true,
                keyboardOptions = KeyboardOptions(
                    imeAction = ImeAction.Done
...
